[project]
name = "wyoming-chatterbox"
version = "1.0.0"
description = "Wyoming Server for Chatterbox TTS"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Michael Hansen", email = "mike@rhasspy.org"},
    {name = "Lucas Spain"}
]
keywords = ["rhasspy", "wyoming", "chatterbox", "tts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "wyoming>=1.7.0,<1.8",
    "regex==2024.11.6",
]

[project.urls]
Homepage = "http://github.com/lucasspain13/wyoming-chatterbox"

[project.scripts]
wyoming-chatterbox = "chatterbox.__main__:run"

[tool.setuptools.packages.find]
include = ["chatterbox"]
exclude = ["tests", "tests.*"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[project.optional-dependencies]
dev = [
    "black==22.12.0",
    "flake8==6.0.0",
    "isort==5.11.3",
    "mypy==0.991",
    "pylint==2.15.9",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "build==1.2.2.post1",
    "scipy>=1.10,<2",
    "numpy>=1.20,<2",
    "python-speech-features==0.6",
]
